# fuzzy-lamp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
docs/: overview.md
examples/: basic.rs
src/: lib.rs
src/charts/: bar.rs  line.rs  mod.rs
tests/: basic.rs
